objects/vlocity_ins__ActivityContentDocument__c.object
<CustomObject>
    <description>Associates Salesforce CRM content to a given sales or marketing activity, such as a meeting with a prospective customer. For example, an entry might associate a product benefits whitepaper with an activity that represents a call report.</description>
    <fields>
        <fullName>vlocity_ins__ActivityId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentDocumentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Document</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentVersionId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Version</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Activity Content Document</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Content Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Content Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>